<resources>
    <string name="app_name">Glory Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_title_text">No available products right now...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product.</string>
    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Product Name.</string>
    <string name="hint_product_quantity">Product Quantitiy .</string>
    <string name="category_price">Product Price</string>
    <string name="hint_product_price">Price</string>
    <string name="unit_product_price">E£</string>
    <string name="upload_product_img">Upload Image</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_img">Product Image</string>
    <string name="product_name">Name</string>
    <string name="save_btn">Save</string>
    <string name="delete_btn">Delete</string>
    <string name="product_price">Price</string>
    <string name="default_product_price">0</string>
    <string name="default_product_quantity">0</string>
    <string name="order_btn">Order</string>
    <string name="quantity_btn_dec">-</string>
    <string name="quantity_btn_inc">+</string>
    <string name="not_in_stock">Sorry, The product is out of stock now , check again later !</string>
    <string name="title_activity_detail_edit">DetailEditActivity</string>
    <string name="missing_info">You must Enter all the product\'s info.</string>
    <string name="editor_insert_product_failed">Product Insertion Failed</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_save">Save</string>
    <string name="action_insert_dummy_data">insert testing data</string>
    <string name="action_delete_all_entries">Delete all data</string>
    <string name="unknown_price">0</string>
    <string name="unknown_quantity">0</string>
    <string name="unknown_product">Temporary Product</string>
    <string name="sell_product_failed">We couldn\'t sell the product</string>
    <string name="hint_product_supplier">Supplier Email</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this item ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">X</string>
    <string name="delete_failed">Unsuccessful Delete</string>
    <string name="delete_successful">Your product is gone for good.</string>
    <string name="Supplier">Supplier Email</string>
    <string name="email_subject">Order</string>
    <string name="greetings">Hello,</string>
    <string name="message">I would like to order the following :</string>
    <string name="product_name_title">Product\'s Name:</string>
    <string name="thank">Thanks in advance.</string>
    <string name="in_stock">In Stock:</string>
</resources>
